--- a/14-PCA_lab-RH.ipynb
+++ b/14-PCA_lab-RH.ipynb
@@ -4662,49 +4662,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/sklearn/utils/extmath.py:214: DeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  R = random_state.normal(size=(A.shape[1], size))\n",
+      "//anaconda/lib/python2.7/site-packages/sklearn/utils/extmath.py:314: DeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  return V[:n_components, :].T, s[:n_components], U[:, :n_components].T\n",
+      "//anaconda/lib/python2.7/site-packages/sklearn/utils/extmath.py:314: DeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  return V[:n_components, :].T, s[:n_components], U[:, :n_components].T\n",
+      "//anaconda/lib/python2.7/site-packages/sklearn/utils/extmath.py:314: DeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  return V[:n_components, :].T, s[:n_components], U[:, :n_components].T\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TruncatedSVD(algorithm='randomized', n_components=2, n_iter=5,\n",
-       "       random_state=42, tol=0.6)"
+       "TruncatedSVD(algorithm='randomized', n_components=0.8, n_iter=5,\n",
+       "       random_state=42, tol=0.0)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
+    "n_components < 1 trick to define threshold ONLY works with PCA, not rand_PCA or trun_SVD\n",
     "#with tol\n",
-    "trun_svd = TruncatedSVD(random_state=42, tol=.6)\n",
-    "trun_svd.fit(X_train_small)"
+    "trun_svd = TruncatedSVD(n_components=0.8, random_state=42) #n_components < 1 ==> tol\n",
+    "trun_svd.fit(X_train_small)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trun_svd.n_components"
+    "PCA?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trun_svd?"
    ]
   },
   {
