update HW3 post Qs with Alex

--- a/Midterm_GA_DS/Dat_SF_12-Midterm-Questions_RH_v1.ipynb
+++ b/Midterm_GA_DS/Dat_SF_12-Midterm-Questions_RH_v1.ipynb
@@ -60,7 +60,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "pd.set_option('display.max_rows',100)\n",
+    "\n",
+    "#optional settings\n",
+    "pd.set_option('display.max_rows',15)\n",
     "pd.set_option('display.max_columns',60)\n",
     "\n",
     "%matplotlib inline"
@@ -302,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
